# MangaShelf

./: .gitignore  README.md  database.db  main.py  pyproject.toml
classes/: database_handler.py  gui.py
